--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Smart Health Monitoring Wristwatch</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Arizka Yusril Aziz">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="h2XELx0DXJTINjK7KgLlcL5zjSZc-RohCxMDF6JwyUU" />
+    <meta name="description" content="CV template tailwind is a HTML resume template for professionals. Built with TailwindCSS , Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skils and experience."/>
+    <title>cv template tailwind_ make by Arizka</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/tailwindcss@next/dist/tailwind.min.css"
