--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     rel="stylesheet"
     />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="loading.css">
+    <script src="jquery-2.1.4.js"></script>
   </head>
   <body class="text-gray-700 bg-white"
     style="font-family: 'Source Sans Pro', sans-serif">
@@ -407,8 +409,14 @@
           </footer>
           
         </div>
-      </div>  
+      </div>
+
+      <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+      </div>
     
+   
+
   <script>
       /*Toggle dropdown list*/
     /*https://gist.github.com/slavapas/593e8e50cf4cc16ac972afcbad4f70c8*/
@@ -462,7 +470,7 @@
       return false;
     }
 
-
   </script>
+  
   </body>
 </html>
