--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="google-site-verification" content="h2XELx0DXJTINjK7KgLlcL5zjSZc-RohCxMDF6JwyUU" />
     <meta name="description" content="CV template tailwind is a HTML resume template for professionals. Built with TailwindCSS , Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skils and experience."/>
     <title>cv template tailwind_ make by Arizka</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/tailwindcss@next/dist/tailwind.min.css"
-    />
-    <!-- <link href="styles/output.css" type="text/css" rel="stylesheet" /> -->
+    /> -->
+    <link href="./styles/output.css" type="text/css" rel="stylesheet" />
     <link
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700"
     rel="stylesheet"
@@ -435,10 +435,10 @@
         if (userMenuDiv.classList.contains("invisible")) {
         userMenuDiv.classList.remove("invisible");
         } else {userMenuDiv.classList.add("invisible");}
-      } else {
-        // click both outside link and outside menu, hide menu
-        userMenuDiv.classList.add("invisible");
-      }
+          } else {
+            // click both outside link and outside menu, hide menu
+            userMenuDiv.classList.add("invisible");
+          }
       }
       
       //Nav Menu
