--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="pt-12 pb-8">
           <button class="bg-teal-700 hover:bg-teal-900 text-white font-bold py-2 px-4 rounded-full" >
              <a href="https://api.whatsapp.com/send?phone=6283872231072&text=InsyaAllah%20Mas,%20Bismillah%20Nggeh%20maskuu">Mau,InsyaAllah !</a>
-          </button> 
+          </button><br>
           <button class="bg-red-700 hover:bg-teal-900 text-white font-bold py-2 px-4 rounded-full" >
              <a href="https://api.whatsapp.com/send?phone=6283872231072&text=Apaan%20sih%20mas%20...%20malu%20tauuk">Afwan,Skip !</a>
           </button> 
