--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="h2XELx0DXJTINjK7KgLlcL5zjSZc-RohCxMDF6JwyUU" />
-    <meta name="description" content="CV template tailwind is a HTML resume template for professionals. Built with TailwindCSS , Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skils and experience."/>
+    <meta name="description" content="Spesial untuk Kurnia Nur Wahidah"/>
     <title>cv template tailwind_ make by Arizka</title>
     <!-- <link
       rel="stylesheet"
